--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "laravelcollective/html": "^6.2",
         "spatie/laravel-image-optimizer": "^1.6",
         "stefangabos/zebra_image": "dev-master",
-        "tymon/jwt-auth": "1.0"
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
